@@ -6,11 +6,11 @@
 
 =head1 NAME
 
-Rex::Commands::Fs - Filesystem commands
+Rex::Commands::Fs - File system commands
 
 =head1 DESCRIPTION
 
-With this module you can do file system tasks like creating a directory, deleting files, moving files, and more.
+With this module you can do file system tasks like creating directories, deleting or moving files, and more.
 
 =head1 SYNOPSIS
 
@@ -82,7 +82,7 @@ These commands are supposed to change the contents of the file system.
 
 =head3 symlink($from, $to)
 
-This function will create a symlink from $from to $to.
+This function will create a symbolic link from C<$from> to C<$to>.
 
  task "symlink", "server01", sub {
    symlink("/var/www/versions/1.0.0", "/var/www/html");
@@ -116,7 +116,7 @@ sub symlink {
 
 =head3 ln($from, $to)
 
-ln is an alias for I<symlink>
+C<ln> is an alias for C<symlink>
 
 =cut
 
@@ -126,7 +126,7 @@ sub ln {
 
 =head3 unlink($file)
 
-This function will remove the given file.
+This function will remove the given C<$file>.
 
  task "unlink", "server01", sub {
    unlink("/tmp/testfile");
@@ -176,7 +176,7 @@ sub unlink {
 
 =head3 rm($file)
 
-This is an alias for unlink.
+This is an alias for C<unlink>.
 
 =cut
 
@@ -193,7 +193,7 @@ This function will remove the given directory.
  };
 
 
-Since: 0.45 Please use the file() resource instead.
+With Rex-0.45 and newer, please use the L<file|Rex::Commands::File#file> resource instead.
 
  task "prepare", sub {
    file "/tmp",
@@ -245,7 +245,7 @@ sub rmdir {
 
 This function will create a new directory.
 
-Since: 0.45 Please use the file() resource instead.
+With Rex-0.45 and newer, please use the L<file|Rex::Commands::File#file> resource instead.
 
  task "prepare", sub {
    file "/tmp",
@@ -380,7 +380,7 @@ sub mkdir {
   return 1;
 }
 
-=head3 chown($owner, $file)
+=head3 chown($owner, $path)
 
 Change the owner of a file or a directory.
 
@@ -392,7 +392,7 @@ Change the owner of a file or a directory.
 
 This command will not be reported.
 
-If you want to use reports, please use the file() resource instead.
+If you want to use reports, please use the L<file|Rex::Commands::File#file> resource instead.
 
 =cut
 
@@ -404,7 +404,7 @@ sub chown {
   $fs->chown( $user, $file, @opts ) or die("Can't chown $file");
 }
 
-=head3 chgrp($group, $file)
+=head3 chgrp($group, $path)
 
 Change the group of a file or a directory.
 
@@ -416,7 +416,7 @@ Change the group of a file or a directory.
 
 This command will not be reported.
 
-If you want to use reports, please use the file() resource instead.
+If you want to use reports, please use the L<file|Rex::Commands::File#file> resource instead.
 
 =cut
 
@@ -428,7 +428,7 @@ sub chgrp {
   $fs->chgrp( $group, $file, @opts ) or die("Can't chgrp $file");
 }
 
-=head3 chmod($mode, $file)
+=head3 chmod($mode, $path)
 
 Change the permissions of a file or a directory.
 
@@ -440,7 +440,7 @@ Change the permissions of a file or a directory.
 
 This command will not be reported.
 
-If you want to use reports, please use the file() resource instead.
+If you want to use reports, please use the L<file|Rex::Commands::File#file> resource instead.
 
 =cut
 
@@ -454,7 +454,7 @@ sub chmod {
 
 =head3 rename($old, $new)
 
-This function will rename $old to $new. Will return 1 on success and 0 on failure.
+This function will rename C<$old> to C<$new>. Will return 1 on success and 0 on failure.
 
  task "rename", "server01", sub {
    rename("/tmp/old", "/tmp/new");
@@ -507,7 +507,7 @@ sub rename {
 
 =head3 mv($old, $new)
 
-mv is an alias for I<rename>.
+C<mv> is an alias for C<rename>.
 
 =cut
 
@@ -517,7 +517,7 @@ sub mv {
 
 =head3 cp($source, $destination)
 
-cp will copy $source to $destination (it is recursive)
+C<cp> will copy C<$source> to C<$destination> recursively.
 
  task "cp", "server01", sub {
     cp("/var/www", "/var/www.old");
@@ -566,7 +566,7 @@ These commands should not change the contents of the file system.
 
 =head3 list_files("/path");
 
-This function list all entries (files, directories, ...) in a given directory and returns a array.
+This function lists all entries (files, directories, ...) in a given directory and returns them as an array.
 
  task "ls-etc", "server01", sub {
    my @tmp_files = grep { /\.tmp$/ } list_files("/etc");
@@ -588,7 +588,7 @@ sub list_files {
 
 =head3 ls($path)
 
-Just an alias for I<list_files>
+Just an alias for C<list_files>.
 
 =cut
 
@@ -598,7 +598,7 @@ sub ls {
 
 =head3 stat($file)
 
-This function will return a hash with the following information about a file or directory.
+This function will return a hash with the following information about a file or directory:
 
 =over 4
 
@@ -648,9 +648,9 @@ sub stat {
   return %ret;
 }
 
-=head3 is_file($file)
+=head3 is_file($path)
 
-This function tests if $file is a file. Returns 1 if true. 0 if false.
+This function tests if C<$path> is a file. Returns 1 if true, 0 if false.
 
  task "isfile", "server01", sub {
    if( is_file("/etc/passwd") ) {
@@ -673,9 +673,9 @@ sub is_file {
   return $fs->is_file($file);
 }
 
-=head3 is_dir($dir)
+=head3 is_dir($path)
 
-This function tests if $dir is a directory. Returns 1 if true. 0 if false.
+This function tests if C<$path> is a directory. Returns 1 if true, 0 if false.
 
  task "isdir", "server01", sub {
    if( is_dir("/etc") ) {
@@ -699,9 +699,9 @@ sub is_dir {
 
 }
 
-=head3 is_symlink($file)
+=head3 is_symlink($path)
 
-This function tests if $file is a symlink. Returns 1 if true. 0 if false.
+This function tests if C<$path> is a symbolic link. Returns 1 if true, 0 if false.
 
  task "issym", "server01", sub {
    if( is_symlink("/etc/foo.txt") ) {
@@ -724,9 +724,9 @@ sub is_symlink {
   return $fs->is_symlink($path);
 }
 
-=head3 is_readable($file)
+=head3 is_readable($path)
 
-This function tests if $file is readable. It returns 1 if true. 0 if false.
+This function tests if C<$path> is readable. It returns 1 if true, 0 if false.
 
  task "readable", "server01", sub {
    if( is_readable("/etc/passwd") ) {
@@ -750,9 +750,9 @@ sub is_readable {
   return $fs->is_readable($file);
 }
 
-=head3 is_writable($file)
+=head3 is_writable($path)
 
-This function tests if $file is writable. It returns 1 if true. 0 if false.
+This function tests if C<$path> is writable. It returns 1 if true, 0 if false.
 
  task "writable", "server01", sub {
    if( is_writable("/etc/passwd") ) {
@@ -778,9 +778,7 @@ sub is_writable {
 
 =head3 is_writeable($file)
 
-This is only an alias for I<is_writable>.
-
-This command will not be reported.
+This is only an alias for C<is_writable>.
 
 =cut
 
@@ -790,8 +788,7 @@ sub is_writeable {
 
 =head3 readlink($link)
 
-This function returns the link endpoint if $link is a symlink. If $link is not a symlink it will die.
-
+If C<$link> is a symbolic link, returns the path it resolves to, and C<die()>s otherwise.
 
  task "islink", "server01", sub {
    my $link;
@@ -824,7 +821,7 @@ sub readlink {
 
 =head3 chdir($newdir)
 
-This function will change the current workdirectory to $newdir. This function currently only works local.
+This function will change the working directory to C<$newdir>. This function currently works only locally.
 
  task "chdir", "server01", sub {
    chdir("/tmp");
@@ -841,7 +838,7 @@ sub chdir {
 
 =head3 cd($newdir)
 
-This is an alias of I<chdir>.
+This is an alias of C<chdir>.
 
 =cut
 
@@ -851,7 +848,7 @@ sub cd {
 
 =head3 df([$device])
 
-This function returns a hashRef reflecting the output of I<df>
+This function returns a hash reference which reflects the output of C<df>.
 
  task "df", "server01", sub {
     my $df = df();
@@ -918,7 +915,7 @@ sub _parse_df {
 
 =head3 du($path)
 
-Returns the disk usage of $path.
+Returns the disk usage of C<$path>.
 
  task "du", "server01", sub {
    say "size of /var/www: " . du("/var/www");
@@ -965,7 +962,7 @@ Mount devices.
  
  };
 
-In order to be more aligned with `mount` terminology, the previously used `fs` option has been deprecated in favor of the `type` option. The `fs` option is still supported and works as previously, but Rex prints a warning if it is being used. There's also a warning if both `fs` and `type` options are specified, and in this case `type` will be used.
+In order to be more aligned with C<mount> terminology, the previously used C<fs> option has been deprecated in favor of the C<type> option. The C<fs> option is still supported and works as previously, but Rex prints a warning if it is being used. There's also a warning if both C<fs> and C<type> options are specified, and in this case C<type> will be used.
 
 =cut
 
@@ -1185,6 +1182,8 @@ sub umount {
 }
 
 =head3 glob($glob)
+
+Returns the list of filename expansions for C<$glob> as L<Perl's built-in glob|https://perldoc.perl.org/functions/glob.html> would do.
 
  task "glob", "server1", sub {
    my @files_with_p = grep { is_file($_) } glob("/etc/p*");
